# CSHMovies

./: .gitignore  LICENSE  README.md  plexsearch.sample.ini  requirements.txt  setup.cfg
frontend/: index.html  redirect.html  results.html
frontend/resources/api/: api.php  keys.sample.php
frontend/resources/app/: app.js
frontend/resources/css/: main.css
frontend/resources/js/: jquery.smartBanner.js  smartBanner.css
plexsearch/: plexsearch.py
