[metadata]
name = plexsearch
author = Liam Middlebrook
author-email = liammiddlebrook@gmail.com
summary = Plex Movie Search
description-file = README.md
license = MIT
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
keywords =
    plex
[files]
packages =
    plexsearch
[entry_points]
console_scripts =
    plex-search-server=plexsearch.plexsearch:main
    plex-search-create-db=plexsearch.plexsearch:create_database
    plex-search-clear-db=plexsearch.plexsearch:clear_database
    plex-search-fill-db=plexsearch.plexsearch:populate_database
