[metadata]
name = plexsearch
author = Liam Middlebrook
author-email = liammiddlebrook@gmail.com
summary = Plex Movie Search
description-file = README.md
license = MIT
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
keywords =
    plex
[files]
packages =
    plexsearch
[entry_points]
console_scripts =
    plex-search-server=plexsearch.plexsearch:main
